+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.4.4c1?
=============================

*Release date: DD-MMM-2006*

Core and builtins
-----------------

- Bug #992017: A classic class that defined a __coerce__() method that returned
  its arguments swapped would infinitely recurse and segfault the interpreter.

- Bug #532646: The object set to the __call__ attribute has its own __call__
  attribute checked; this continues until the attribute can no longer be found
  or segfaulting.  Recursion limit is now followed.

- Bug #1454485: Don't crash on Unicode characters <0.

- Patch #1488312, Fix memory alignment problem on SPARC in unicode

Extension Modules
-----------------

- Bug #1512695: cPickle.loads could crash if it was interrupted with
  a KeyboardInterrupt.

- Change binascii.hexlify() to accept any read-only buffer and not just a char
  buffer.

- Fixed a potentially invalid memory access of CJKCodecs' shift-jis decoder.

- Calling Tk_Init twice is refused if the first call failed as that
  may deadlock.

- Patch #1191065: Fix preprocessor problems on systems where recvfrom
  is a macro.

- Bug #1467952: os.listdir() now correctly raises an error if readdir()
  fails with an error condition.

- Fix bsddb.db.DBError derived exceptions so they can be unpickled.

- Bug #1117761: bsddb.*open() no longer raises an exception when using
  the cachesize parameter.

- Bug #1493322: bsddb: the __len__ method of a DB object has been fixed to
  return correct results.  It could previously incorrectly return 0 in some
  cases.  Fixes SF bug 1493322 (pybsddb bug 1184012).


Library
-------

- Bug #822974: Honor timeout in telnetlib.{expect,read_until}
  even if some data are received.

- Bug #1267547: Put proper recursive setup.py call into the
  spec file generated by bdist_rpm.

- Bug #1504333: Make sgmllib support angle brackets in quoted attribute
  values.
